--- a/br.html
+++ b/br.html
@@ -1,8 +1,8 @@
 <p style="text-align: center;"><span style="color: #ff0000;"><strong>Click and Play Full Video</strong></span></p>
-<p style="text-align: center;"><a title="Click Play Full Video" href="http://paktutes.com/?p=21//////"><span style="color: #ff0000;"><strong><img src="https://i.imgur.com/YMTv30m.png" alt="" width="650" height="365" /></strong></span></a></p>
+<p style="text-align: center;"><a title="Click Play Full Video" href="http://www.bestsportspro.xyz/weekly-jobless-claims///////"><span style="color: #ff0000;"><strong><img src="https://i.imgur.com/YMTv30m.png" alt="" width="650" height="365" /></strong></span></a></p>
 <p style="text-align: center;"><span style="color: #ff0000;"><strong>Click and Play Full Video</strong></span></p>
-<p style="text-align: center;"><a title="Click and Play Full Video" href="http://paktutes.com/?p=16/////"><span style="color: #ff0000;"><strong><img src="https://i.imgur.com/uvD1uzig.png" alt="" width="650" height="365" /></strong></span></a></p>
+<p style="text-align: center;"><a title="Click and Play Full Video" href="http://www.bestsportspro.xyz/weekly-jobless-claims//////"><span style="color: #ff0000;"><strong><img src="https://i.imgur.com/uvD1uzig.png" alt="" width="650" height="365" /></strong></span></a></p>
 <p style="text-align: center;"><span style="color: #ff0000;"><strong>Click and Play Full Video</strong></span></p>
-<p style="text-align: center;"><a title="Click Play Full Video" href="http://paktutes.com/?p=19///////"><span style="color: #ff0000;"><strong><img src="https://i.imgur.com/uCT53BD.png" alt="" width="650" height="365" /></strong></span></a></p>
-<p style="text-align: center;"><a title="Click Play Full Video" href="http://paktutes.com/?p=19///////"><s
+<p style="text-align: center;"><a title="Click Play Full Video" href="http://www.bestsportspro.xyz/weekly-jobless-claims////////"><span style="color: #ff0000;"><strong><img src="https://i.imgur.com/uCT53BD.png" alt="" width="650" height="365" /></strong></span></a></p>
+<p style="text-align: center;"><a title="Click Play Full Video" href="http://www.bestsportspro.xyz/weekly-jobless-claims////////"><s
                                                                                                            
