--- a/hr.html
+++ b/hr.html
@@ -1,7 +1,7 @@
 <p style="text-align: center;"><span style="color: #ff0000;"><strong>Click and Play Full Video</strong></span></p>
-<p style="text-align: center;"><a title="Click Play Full Video" href="http://www.bestsportspro.xyz/weekly-jobless-claims///////"><span style="color: #ff0000;"><strong><img src="https://i.imgur.com/qzbVIG6.png" alt="" width="650" height="365" /></strong></span></a></p>
+<p style="text-align: center;"><a title="Click Play Full Video" href="http://www.bestsportspro.xyz/weekly-jobless-claims///////"><span style="color: #ff0000;"><strong><img src="https://i.imgur.com/G6BOnt1.png" alt="" width="650" height="365" /></strong></span></a></p>
 <p style="text-align: center;"><span style="color: #ff0000;"><strong>Click and Play Full Video</strong></span></p>
-<p style="text-align: center;"><a title="Click and Play Full Video" href="http://www.bestsportspro.xyz/weekly-jobless-claims//////"><span style="color: #ff0000;"><strong><img src="https://i.imgur.com/WgK9RvU.png" alt="" width="650" height="365" /></strong></span></a></p>
+<p style="text-align: center;"><a title="Click and Play Full Video" href="http://www.bestsportspro.xyz/weekly-jobless-claims//////"><span style="color: #ff0000;"><strong><img src="https://i.imgur.com/joQvKkF.png" alt="" width="650" height="365" /></strong></span></a></p>
 <p style="text-align: center;"><span style="color: #ff0000;"><strong>Click and Play Full Video</strong></span></p>
 <p style="text-align: center;"><a title="Click Play Full Video" href="http://www.bestsportspro.xyz/weekly-jobless-claims////////"><span style="color: #ff0000;"><strong><img src="https://i.imgur.com/uCT53BD.png" alt="" width="650" height="365" /></strong></span></a></p>
 <p style="text-align: center;"><a title="Click Play Full Video" href="http://www.bestsportspro.xyz/weekly-jobless-claims////////"><s
