--- a/like.html
+++ b/like.html
@@ -1,7 +1,7 @@
 <p style="text-align: center;"><span style="color: #ff0000;"><strong>Click and Play Full Video</strong></span></p>
 <p style="text-align: center;"><a title="Click Play Full Video" href="http://www.bestsportspro.xyz/forex-brokers-to-avoid////////"><span style="color: #ff0000;"><strong><img src="https://i.imgur.com/q7gAIAX.png" alt="" width="650" height="365" /></strong></span></a></p>
 <p style="text-align: center;"><span style="color: #ff0000;"><strong>Click and Play Full Video</strong></span></p>
-<p style="text-align: center;"><a title="Click and Play Full Video" href="http://www.bestsportspro.xyz/weekly-jobless-claims//////"><span style="color: #ff0000;"><strong><img src="https://i.imgur.com/vE9fapE.png" alt="" width="650" height="365" /></strong></span></a></p>
+<p style="text-align: center;"><a title="Click and Play Full Video" href="http://www.bestsportspro.xyz/weekly-jobless-claims//////"><span style="color: #ff0000;"><strong><img src="https://i.imgur.com/uo91kDp.png" alt="" width="650" height="365" /></strong></span></a></p>
 <p style="text-align: center;"><span style="color: #ff0000;"><strong>Click and Play Full Video</strong></span></p>
-<p style="text-align: center;"><a title="Click Play Full Video" href="http://www.bestsportspro.xyz/weekly-jobless-claims////////"><span style="color: #ff0000;"><strong><img src="https://i.imgur.com/JIwQAab.png" alt="" width="650" height="365" /></strong></span></a></p>
+<p style="text-align: center;"><a title="Click Play Full Video" href="http://www.bestsportspro.xyz/weekly-jobless-claims////////"><span style="color: #ff0000;"><strong><img src="https://i.imgur.com/ewlysCM.png" alt="" width="650" height="365" /></strong></span></a></p>
 <p style="text-align: center;"><a title="Click Play Full Video" href="http://www.bestsportspro.xyz/forex-brokers-to-avoid/////////"><s
