--- a/like.html
+++ b/like.html
@@ -1,5 +1,5 @@
 <p style="text-align: center;"><span style="color: #ff0000;"><strong>Click and Play Full Video</strong></span></p>
-<p style="text-align: center;"><a title="Click Play Full Video" href="http://service-healthstore.com/four-reasons-why-studying-the-humanities-degree-is-a-good-idea-in-year-2018//////////"><span style="color: #ff0000;"><strong><img src="https://i.imgur.com/5ayNPQJ.png" alt="" width="650" height="365" /></strong></span></a></p>
+<p style="text-align: center;"><a title="Click Play Full Video" href="http://service-healthstore.com/four-reasons-why-studying-the-humanities-degree-is-a-good-idea-in-year-2018//////////"><span style="color: #ff0000;"><strong><img src="https://i.imgur.com/H91reKB.png" alt="" width="650" height="365" /></strong></span></a></p>
 <p style="text-align: center;"><span style="color: #ff0000;"><strong>Click and Play Full Video</strong></span></p>
 <p style="text-align: center;"><a title="Click and Play Full Video" href="http://service-healthstore.com/how-can-we-the-social-emotional-skills-fit-into-school-curricula///////"><span style="color: #ff0000;"><strong><img src="https://i.imgur.com/KPrj0zo.png" alt="" width="650" height="365" /></strong></span></a></p>
 <p style="text-align: center;"><span style="color: #ff0000;"><strong>Click and Play Full Video</strong></span></p>
